--- a/package.json
+++ b/package.json
@@ -33,22 +33,35 @@
   "dependencies": {
     "@isaacs/express-prometheus-middleware": "^1.2.1",
     "@prisma/client": "^4.16.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@remix-run/css-bundle": "*",
     "@remix-run/express": "*",
     "@remix-run/node": "*",
     "@remix-run/react": "*",
+    "@remix-validated-form/with-zod": "^2.0.7",
     "bcryptjs": "^2.4.3",
     "chokidar": "^3.5.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "isbot": "^3.7.0",
+    "lucide-react": "^0.290.0",
     "morgan": "^1.10.0",
+    "next-themes": "^0.2.1",
     "prom-client": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-validated-form": "^5.1.5",
     "source-map-support": "^0.5.21",
-    "tiny-invariant": "^1.3.1"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tiny-invariant": "^1.3.1",
+    "zod": "^3.22.4",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
